*SVN*

* Unrescued ActiveRecord::RecordNotFound responds with 404 instead of 500.  [Jeremy Kemper]

* Improved auto_link to match more valid urls correctly [Tobias Luetke]

* Add singleton resources. [Rick Olson]

  map.resource :account
  
  GET /account
  GET /account;edit
  UPDATE /account
  DELETE /account

* respond_to recognizes JSON. render :json => @person.to_json automatically sets the content type and takes a :callback option to specify a client-side function to call using the rendered JSON as an argument.  #4185 [Scott Raymond, eventualbuddha]
    # application/json response with body 'Element.show({:name: "David"})'
    respond_to do |format|
      format.json { render :json => { :name => "David" }.to_json, :callback => 'Element.show' }
    end

* Makes :discard_year work without breaking multi-attribute parsing in AR.  #1260, #3800 [sean@ardismg.com, jmartin@desertflood.com, stephen@touset.org, Bob Silva]

* Adds html id attribute to date helper elements.  #1050, #1382 [mortonda@dgrmm.net, David North, Bob Silva]

* Add :index and @auto_index capability to model driven date/time selects.  #847, #2655 [moriq, Doug Fales, Bob Silva]

* Add :order to datetime_select, select_datetime, and select_date.  #1427 [Timothee Peignier, patrick@lenz.sh, Bob Silva]

* Added time_select to work with time values in models. Update scaffolding.  #2489, #2833 [Justin Palmer, Andre Caum, Bob Silva]

* Added :include_seconds to select_datetime, datetime_select and time_select.  #2998 [csn, Bob Silva]

* All date/datetime selects can now accept an array of month names with :use_month_names. Allows for localization.  #363 [tomasj, Bob Silva]

* Adds :time_separator to select_time and :date_separator to select_datetime. Preserves BC.  #3811 [Bob Silva]

* Added map.root as an alias for map.connect '' [DHH]
