@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix a bug in Routing where a parameter taken from the path of the current request could not be used as a query parameter for the next. Closes #6752. [Nicholas Seckar]
+
 * Unrescued ActiveRecord::RecordNotFound responds with 404 instead of 500.  [Jeremy Kemper]
 
 * Improved auto_link to match more valid urls correctly [Tobias Luetke]
